# Object-Detection

./: Convert.ipynb  Untitled-1.ipynb  demo.ipynb  installation_guide.md  live.py  model.pt  realsense_yolo_test.py  test.ipynb  test.py
Weekly_Report/: Gnep_Vandara_Week1_Logbook.docx  Gnep_Vandara_Week2_Logbook.docx  Gnep_Vandara_Week3_Logbook.docx  Gnep_Vandara_Week4_Logbook.docx  Gnep_Vandara_Week5_Logbook.docx  Gnep_Vandara_Week6_Logbook.docx  Gnep_Vandara_Week7_Logbook.docx  Gnep_Vandara_Week8_Logbook.docx
dqn_logs/: monitor.csv
dqn_logs/DQN_1/: events.out.tfevents.1715093572.cadt02-pc.28676.0
dqn_logs/DQN_10/: events.out.tfevents.1715182559.cadt02-pc.18462.0
dqn_logs/DQN_11/: events.out.tfevents.1715183064.cadt02-pc.20903.0
dqn_logs/DQN_12/: events.out.tfevents.1715184436.cadt02-pc.27189.0
dqn_logs/DQN_13/: events.out.tfevents.1715184794.cadt02-pc.28785.0
install/: local_setup.sh  setup.sh
log/: latest_build
ros2_workspace/install/: local_setup.sh  (+1 more)
ros2_workspace/src/object_detection_pkg/: CMakeLists.txt  package.xml
ros2_workspace/src/object_detection_pkg/include/object_detection_pkg/: live_detection_node.py  realsense_camera_node.py  yolo_detector_node.py
ros2_workspace/src/object_detection_pkg/launch/: object_detection_launch.py
ros2_ws/src/my_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_package/my_package/: live_detection_node.py  main.py  reinforcement_r2.py
ros2_ws/src/my_package/my_package/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/my_package/my_package/log/: latest_build
(+116 files in other folders)
