[develop]
script_dir=$base/lib/my_package
[install]
install_scripts=$base/lib/my_package

[build]
build-base=build

[options]
packages = find:
install_requires = 
    setuptools

[options.package_data]
* = *.msg, *.srv, *.action

[options.entry_points]
console_scripts =
    reinforcement_r2 = my_package.reinforcement_r2:main
